[package]
name = "cement-extractor"
version = "0.1.0"
edition = "2021"
description = "File extractor for ATG Core Cement Library RCF archives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"

[[bin]]
name = "cement-extract"
path = "src/main.rs"
